feat: implementacion estructura principal de la aplicación con filtros e integración de vista principal

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -74,14 +74,25 @@
       },
       "routes": [
         {
+          "name": "RouteFiltros",
+          "pattern": "",
+          "target": [
+            "TargetFiltros"
+          ]
+        },
+        {
           "name": "RouteMainView",
-          "pattern": ":?query:",
+          "pattern": "resultados",
           "target": [
             "TargetMainView"
           ]
         }
       ],
       "targets": {
+        "TargetFiltros": {
+          "id": "Filtros",
+          "name": "Filtros"
+        },
         "TargetMainView": {
           "id": "MainView",
           "name": "MainView"
